chore: add white and black colors

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,6 +39,9 @@
   --color-neutral-1000: #828282;
   --color-neutral-1100: #626262;
   --color-neutral-1200: #202020;
+
+  --color-white: #fff;
+  --color-black: #000;
 }
 
 ::selection {
